# DepthDif

./: .gitignore  Colab_Demo.ipynb  DepthDif_Colab_Inference.ipynb  MANIFEST.in  README.md  experiments.py  export_global_inference.py  inference.py  mkdocs.yml  ostia_patch_index_spatial_0p1.csv  pyproject.toml  requirements.txt  train.py  train_autoencoder.py
.github/workflows/: deploy-mkdocs.yml  publish-pypi.yml
configs/: data.yaml  data_4band_config.yaml  data_config.yaml  data_config_eo_4band.yaml  data_ostia.yaml  model_config.yaml  model_config_eo_4band.yaml  training_config.yaml  training_config_eo_4band.yaml
configs/lat_space/: data_config.yaml  model_config.yaml  training_config.yaml
configs/older_configs/: data.yaml  data_config.yaml  model_config.yaml
configs/px_space/: data_ostia.yaml  data_ostia_argo_disk.yaml  data_ostia_argo_disk_actual.yaml  data_ostia_argo_disk_synth250.yaml  data_ostia_argo_geotiff.yaml  data_ostia_argo_netcdf.yaml  data_ostia_argo_netcdf_actual.yaml  data_ostia_argo_zarr.yaml  model_config.yaml  model_config_ambient.yaml  training_config.yaml
configs/sweeps/: eo_occlusion_grid_no_eodrop.yaml
data/: EDA.py  EDA_depth_profiles.py  EDA_glorys_argo_alignment.py  aggregate_depth_prod_valid_pixels_geojson.py  argo_observation_stats.py  assign_window_split.py  data_info.txt  datamodule.py  dataset.py  dataset_4bands.py  dataset_argo_geotiff_gridded.py  dataset_argo_netcdf_gridded.py  dataset_argo_zarr_gridded.py  dataset_grid_utils.py  dataset_light.py  dataset_ostia.py  dataset_ostia_argo.py  dataset_ostia_argo_disk.py  dataset_temp_v1.py  dataset_to_disk.py  dataset_utils.py  depth_profiles_info.txt  export_enriched_argo_profiles.py  export_ostia_argo_tiffs.py
data/dataset_creation/: README.md  a_check_export_sourcefiles.py  b_export_enriched_argo_profiles.py  source_files.py  source_variables.yaml
data/get_argo/: build_argo_datetime_match_index.py  download_en4_profiles.sh  merge_argo_into_ostia_daily_index.py
data/get_glorys/: download_glorys_daily.sh  download_glorys_weekly.sh
data/get_ostia/: build_ostia_patch_time_index.py  download_ostia.sh  (+3 more)
depth_recon/: __init__.py
depth_recon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ambient-occlusion-objective.md  api.md  autoencoder.md  baselines.md  comments.md  configs.md  data-contract.md  data-coordinate-injection.md  data-download.md  data-export.md  data-source.md  data.md  dataset-statistics.md  date-coordination-injection.md  depth-alignment.md  development.md  ema.md  experiments-glorys-argo-aligned.md  experiments-production.md  experiments.md  globe.md  index.md  inference.md  model.md  production-datasets.md  public-inference-package.md  quickstart.md  requirements.txt  sampling-diagnostics.md  settings.md  spectral-wavenumber-validation.md  temporal_dimension.md  tests.md  training.md  uncertainty.md
inference/: __init__.py  api.py  core.py  export_cesium_globe_assets.py  export_global.py  export_validation_error_summary.py  run_single.py
scripts/: start_occlusion_sweep.sh  train_autoencoder.sh  train_latent_diffusion.sh
tests/: check_ostia_argo_disk_dataset.py  run_tests.sh  test_argo_geotiff_gridded_dataset.py  test_argo_netcdf_gridded_dataset.py  test_cesium_globe_assets.py  test_check_enriched_export_sources.py  test_dataset_ostia_argo_save_to_disk.py  test_datasets_and_wiring.py  test_diffusion_math.py  test_download_aligned_argo_zarr.py  test_ema.py  test_enriched_argo_export.py  test_error_analysis_dashboard.py  test_export_dataset_geotiff.py  test_export_dataset_zarr.py  test_export_enriched_argo_profiles.py  test_global_inference_export.py  test_huggingface_aligned_argo_package.py  test_model_dry_runs.py  test_paper_metrics_export.py  test_paper_week_export.py  test_pixel_config.py  test_public_inference_api.py  test_temporal_consistency_dashboard.py  test_train_checkpoint_config.py  test_validation_error_summary_export.py  test_wavenumber_spectra.py
utils/: compare_ddpm_ddim_sampling.py  normalizations.py  stretching.py  validation_denoise.py  validation_step_reconstruction_dump.py  visualizations.py
(+158 files in other folders)
