[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-recon"
version = "0.0.1a9"
description = "DepthDif public inference helpers for sparse ocean temperature diffusion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "copernicusmarine",
    "h5netcdf",
    "einops",
    "matplotlib",
    "numpy>=1.26,<2.1",
    "pandas",
    "pytorch-lightning",
    "PyYAML",
    "rasterio",
    "scipy",
    "torch",
    "tqdm",
    "xarray",
]

[project.scripts]
depth-recon-infer-week = "inference.api:infer_week_cli"
depth-recon-download-argo = "inference.api:download_argo_cli"
depth-recon-download-ostia = "inference.api:download_ostia_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["depth_recon*", "inference*", "data*", "models*", "utils*"]
namespaces = true

[tool.setuptools.package-data]
data = [
    "**/*.json",
    "**/*.sh",
    "**/*.tif",
    "**/*.tiff",
    "**/*.txt",
    "**/*.yaml",
    "**/*.yml",
]
inference = [
    "transforms/*.json",
    "transforms/*.txt",
]
