[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-recon"
version = "0.0.1a11"
description = "DepthDif public inference helpers for sparse ocean temperature diffusion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "copernicusmarine",
    "h5netcdf",
    "einops",
    "matplotlib",
    "numpy>=1.26,<2.1",
    "pandas",
    "pytorch-lightning",
    "PyYAML",
    "rasterio",
    "scipy",
    "torch",
    "tqdm",
    "xarray",
]

[project.scripts]
depth-recon-infer-week = "depth_recon.inference.api:infer_week_cli"
depth-recon-download-argo = "depth_recon.inference.api:download_argo_cli"
depth-recon-download-ostia = "depth_recon.inference.api:download_ostia_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["depth_recon*"]
exclude = [
    "depth_recon.inference.outputs*",
    "depth_recon.*.__pycache__*",
    "depth_recon.*.*.__pycache__*",
    "depth_recon.*.*.*.__pycache__*",
]
namespaces = true

[tool.setuptools.package-data]
"depth_recon" = [
    "configs/**/*.yaml",
    "scripts/*.sh",
]
"depth_recon.data" = [
    "**/*.json",
    "**/*.sh",
    "**/*.tif",
    "**/*.tiff",
    "**/*.txt",
    "**/*.yaml",
    "**/*.yml",
]
"depth_recon.inference" = [
    "transforms/*.json",
    "transforms/*.txt",
]
